change a little bit and add pre flow algorithm
change the DFS for F-F that will return the minimum value of flow that
can be increased along the s-t path. Also add the pre flow algorithm